--- a/index.html
+++ b/index.html
@@ -59,14 +59,8 @@
       <h2 class="text-5xl sm:text-7xl fancy-font mb-4 text-pink-700">The Day That’s All About You!</h2>
       <p class="text-xl sm:text-3xl mb-8">October 29</p>
       <div class="text-left text-lg space-y-4 mb-10">
-        <p>To my beautiful <strong style="color:#90064b;">Anuhithaa</strong>,</p>
-        <p>Another year, another reason to be thankful for you.
-        You make everything around you feel lighter and brighter just by being yourself. I’m so lucky to know you and even luckier to celebrate this day with you. You truly deserve every bit of happiness in the world.</p>
-        <p>You know, we met very coincidentally, and at that first moment when I saw you, I never thought we’d become this close. Every time we met after that, I didn’t expect we’d connect so easily either. But somehow, it all just happened naturally, and I’m really glad it did.</p>
-        <p>Till now, you’ve always been so kind and loyal to me. The main thing I admire about you is your heart — you’re genuinely a good person and such a good listener too. I don’t even know why I put in so much effort for you sometimes… maybe it’s because you mean more to me than I can explain.</p>
-        <p>I know you’ve said you’re not interested in a relationship, and that’s okay. Maybe I love you, or maybe there’s just something really special about you — whatever it is, it makes me care about you deeply.</p>
-        <p>No problem at all, because I’ll still be here. I’m not going to change, and I’ll never stop being the same person who genuinely cares for you.</p>
-        <p>Once again, happy birthday, Anuhithaa — I hope your day is as warm, kind, and lovely as you are 🎂</p>
+        <p>To my beautiful <strong style="color:#90064b;">#name</strong>,</p>
+      </p>
       </div>
       <button
         onclick="triggerCelebration()"
@@ -81,25 +75,24 @@
         Heyy <strong>Anuhithaa</strong>,
       </p>
       <p class="text-xl sm:text-2xl mb-8 text-left">
-        To be honest, I’ve always been sincere and loyal to you, and I’ll always stay that way. I don’t know if you’re busy or not, but all I ever wish for is to spend more time with you.
+
       </p>
       <p class="text-xl sm:text-2xl mb-8 text-left">
-        Even the smallest things that happen in my day, I always feel like sharing them with you. I know sometimes you might say, “Did I tell you to do that?” but the truth is, I just can’t lose you.
+
       </p>
       <p class="text-xl sm:text-2xl mb-8 text-left">
-        When someone asks me about you, like “Where’s your girlfriend?”, I can’t help but feel happy inside, even though we’re not in a relationship. Maybe it’s crazy, but I really hope that one day it might come true.
+
       </p>
       <p class="text-xl sm:text-2xl mb-8 text-left">
-        I don’t know how to express my love for you; I’ve never been good with words, but this is my last and final confession — everything I’m saying is straight from my heart.
       </p>
       <p class="text-xl sm:text-2xl mb-8 text-left">
-        I don’t want to disturb you or make you uncomfortable. I’m happy with our friendship, but deep down, I just hope you know how much I love you. ❤️
+        
       </p>
       <hr class="my-4 border-gray-400" />
       <p class="text-center italic text-lg text-pink-700">
         If this brought even the tiniest smile to your face, that’s more than enough for me.<br />
         Once again, <strong>Happy Birthday, my favorite person — stay happy always!</strong> 💫<br /><br />
-        <span class="font-bold">— Yours, Always Abyyy</span>
+        <span class="font-bold">—y</span>
       </p>
     </div>
   </div>
